[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dowg"
version = "0.1.0"
authors = [
  { name="Patrick Shanahan", email="patrick.e.shanahan@gmail.com" },
]
description = "DoWG parameter-free adaptive optimizer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AMorporkian/dowg"
